--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reactv2",
+  "homepage": "https://ConstantinGruhl.github.io/reactv2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
